--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,14 @@
 {
   "functions": {
-    "api/send-email.js": {
+    "api/*.js": {
       "memory": 1024,
       "maxDuration": 10
     }
-  }
+  },
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    }
+  ]
 }
